--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ BenchmarkDotNet.Artifacts/
 
 # .NET Core
 project.lock.json
+appsettings*.json
 appsettings.json
 appsettings.Development.json
 project.fragment.lock.json
