Refatoração - urls das apis no mvc

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "AutenticacaoUrl": "https://localhost:44325/",
+  "CatalogoUrl": "https://localhost:24759/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
