--- a/src/services/NSE.Catalogo.API/NSE.Catalogo.API.csproj
+++ b/src/services/NSE.Catalogo.API/NSE.Catalogo.API.csproj
@@ -17,10 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.28" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
