--- a/src/building blocks/NSE.MessageBus/NSE.MessageBus.csproj
+++ b/src/building blocks/NSE.MessageBus/NSE.MessageBus.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.2.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.28" />
+    <PackageReference Include="Polly" Version="7.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NSE.Core\NSE.Core.csproj" />
+  </ItemGroup>
+
 </Project>
