--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AutenticacaoUrl": "https://localhost:44325/",
   "CatalogoUrl": "https://localhost:44336/",
+  "CarrinhoUrl": "https://localhost:44394/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
